{
    "name": "InputMappings",
    "maps": [
        {
            "name": "Player",
            "id": "d57442dd-d92d-46e6-830f-678db8bc120e",
            "actions": [
                {
                    "name": "MoveWASD",
                    "type": "Value",
                    "id": "493143c1-aac3-40f2-8c89-53003be796de",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpWASD",
                    "type": "Button",
                    "id": "fab4f23b-85ad-42e5-8662-320e28abc8b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveARROWS",
                    "type": "Value",
                    "id": "d5069b8e-6a0e-4636-b381-130bdf851684",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpARROWS",
                    "type": "Button",
                    "id": "d62e5002-67c4-400a-be7f-af2aa5eb282d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "99cb8e20-d81c-482e-82fd-58d86ab0762e",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "MoveWASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "e7546199-d687-4a2c-adea-4c14774def97",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "MoveWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5bb4fc0c-cf71-466e-91c8-dc8c60f5709a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "MoveWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7004a0c6-0108-47a0-ae5b-d0d9ec9b72a7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "MoveWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ARROWS",
                    "id": "af2276a5-0a72-4eb9-95ec-070e7a56fc53",
                    "path": "Dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "MoveARROWS",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "fa2472b4-0b16-4b0c-baff-441306d51fdc",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "MoveARROWS",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ef21c638-2fc3-4787-ab69-beaf8354759c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "MoveARROWS",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d10241b3-72f4-478f-83eb-9057e82cbe16",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "MoveARROWS",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9ac6446e-dada-4334-b01e-0ee4895b4517",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "JumpARROWS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26ba1b7e-fe03-4ab2-a268-9d9e95f0f258",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "JumpWASD",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player",
            "bindingGroup": "Player",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}